--- a/public/style.css
+++ b/public/style.css
@@ -1393,7 +1393,7 @@
         }
 
         body {
-            font-family: helvetica neue, Helvetica, Arial, sans-serif;
+            font-family: fira code,helvetica neue, Helvetica, Arial, sans-serif;
             font-size: 14px;
             line-height: 1.42857143;
             color: #333;
